--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
         "laravel-mix": "^6.0.6",
         "lodash": "^4.17.19",
         "popper.js": "^1.16.1",
-        "postcss": "^8.1.14"
+        "postcss": "^8.1.14",
+        "store": "^2.0.12"
     },
     "overrides": {
         "autoprefixer": "10.4.5"
