--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
         "bootstrap": "^4.6.1",
         "datatables.net-bs4": "^1.12.1",
         "datatables.net-buttons-bs4": "^2.2.3",
+        "datatables.net-plugins": "^1.11.5",
         "datatables.net-responsive-bs4": "^2.3.0",
         "datatables.net-select-bs4": "^1.4.0",
         "jquery": "^3.6.1",
