--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
         "lodash": "^4.17.19",
         "popper.js": "^1.16.1",
         "postcss": "^8.1.14",
-        "store": "^2.0.12"
+        "store": "^2.0.12",
+        "urijs": "^1.19.11"
     },
     "overrides": {
         "autoprefixer": "10.4.5"
